# server/docs/swagger.json
@@ -48,7 +48,7 @@
             "post": {
                 "description": "dump the database.",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -59,18 +59,13 @@
                 "summary": "Dump the database.",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User",
-                        "name": "user",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Database",
-                        "name": "database",
-                        "in": "formData",
-                        "required": true
+                        "description": "dump params",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.DumpRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -85,6 +80,17 @@
         }
     },
     "definitions": {
+        "main.DumpRequest": {
+            "type": "object",
+            "properties": {
+                "database": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "string"
+                }
+            }
+        },
         "main.Response": {
             "type": "object",
             "properties": {
